<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/inputSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoA"/>

        <EditText
            android:id="@+id/txtB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoB"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonsSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/inputSection"> <!--Под inputSection
        делается линия-->

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_add_click"
            android:text="@string/infoAdd" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_sub_click"
            android:text="@string/infoSub" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_mul_click"
            android:text="@string/infoMult" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_div_click"
            android:text="@string/infoDiv" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsSection2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonsSection"> <!--Под inputSection
        делается линия-->

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_sin_click"
            android:text="@string/infoSin" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_cos_click"
            android:text="@string/infoCos" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_tg_click"
            android:text="@string/infoTan" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_ctg_click"
            android:text="@string/infoCtg" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsSection3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonsSection2"> <!--Под inputSection
        делается линия-->

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_two_click"
            android:text="@string/infoPow" />

        <Button
            android:id="@+id/Button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="my_sqrt_click"
            android:text="@string/infoSqrt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultSection4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="100dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonsSection3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/infoRes" />

        <TextView
            android:id="@+id/labC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/swichnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchnumber"
        android:text="one/two numbers"
        app:layout_constraintTop_toBottomOf="@+id/resultSection4"
        tools:layout_editor_absoluteX="2dp" />

    <TextView
        android:id="@+id/textView4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Савицкого Михаила"
        app:layout_constraintTop_toBottomOf="@+id/swichnumber"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="409dp" />

</androidx.constraintlayout.widget.ConstraintLayout>